--- a/TensorFlow_C3W2_assignment.ipynb
+++ b/TensorFlow_C3W2_assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPqPMdYsh76nHAqT5hxtBvD",
+      "authorship_tag": "ABX9TyPlATXWb0CIp2PzGqwF6YtG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -301,7 +301,7 @@
         "    Args:\n",
         "        sentences (list of string): lower-cased sentences without stopwords\n",
         "        labels (list of string): list of labels\n",
-        "        training split (float): proportion of the dataset to convert to include in the train set\n",
+        "        training_split (float): proportion of the dataset to convert to include in the train set\n",
         "\n",
         "    Returns:\n",
         "        train_sentences, validation_sentences, train_labels, validation_labels - lists containing the data splits\n",
