--- a/TensorFlow_C4W2_assignment.ipynb
+++ b/TensorFlow_C4W2_assignment.ipynb
@@ -28,18 +28,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "id": "c09324f3",
       "metadata": {
         "deletable": false,
         "editable": false,
-        "id": "c09324f3"
+        "id": "c09324f3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2b92b699-a382-42da-f859-4429842a08aa"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "python3: can't open file '/content/add_metadata.py': [Errno 2] No such file or directory\n"
+          ]
+        }
+      ],
       "source": [
         "# IMPORTANT: This will check your notebook's metadata for grading.\n",
         "# Please do not continue the lab unless the output of this cell tells you to proceed.\n",
         "!python add_metadata.py --filename C3W2_Assignment.ipynb"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lu2ob8hOVa3R",
+        "outputId": "cda99ae5-1689-41ce-8ead-4ec9ef1ce4b3"
+      },
+      "id": "lu2ob8hOVa3R",
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
       ]
     },
     {
@@ -54,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "ce7f3d12",
       "metadata": {
         "deletable": false,
@@ -89,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "id": "51d18e5b",
       "metadata": {
         "deletable": false,
@@ -97,13 +134,32 @@
         "tags": [
           "graded"
         ],
-        "id": "51d18e5b"
+        "id": "51d18e5b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "73c01b5c-2a96-4d56-e31b-efb0a32ab1e5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "First line (header) looks like this:\n",
+            "\n",
+            "category,text\n",
+            "\n",
+            "Each data point looks like this:\n",
+            "\n",
+            "tech,tv future in the hands of viewers with home theatre systems  plasma high-definition tvs  and digital video recorders moving into the living room  the way people watch tv will be radically different in five years  time.  that is according to an expert panel which gathered at the annual consumer electronics show in las vegas to discuss how these new technologies will impact one of our favourite pastimes. with the us leading the trend  programmes and other content will be delivered to viewers via home networks  through cable  satellite  telecoms companies  and broadband service providers to front rooms and portable devices.  one of the most talked-about technologies of ces has been digital and personal video recorders (dvr and pvr). these set-top boxes  like the us s tivo and the uk s sky+ system  allow people to record  store  play  pause and forward wind tv programmes when they want.  essentially  the technology allows for much more personalised tv. they are also being built-in to high-definition tv sets  which are big business in japan and the us  but slower to take off in europe because of the lack of high-definition programming. not only can people forward wind through adverts  they can also forget about abiding by network and channel schedules  putting together their own a-la-carte entertainment. but some us networks and cable and satellite companies are worried about what it means for them in terms of advertising revenues as well as  brand identity  and viewer loyalty to channels. although the us leads in this technology at the moment  it is also a concern that is being raised in europe  particularly with the growing uptake of services like sky+.  what happens here today  we will see in nine months to a years  time in the uk   adam hume  the bbc broadcast s futurologist told the bbc news website. for the likes of the bbc  there are no issues of lost advertising revenue yet. it is a more pressing issue at the moment for commercial uk broadcasters  but brand loyalty is important for everyone.  we will be talking more about content brands rather than network brands   said tim hanlon  from brand communications firm starcom mediavest.  the reality is that with broadband connections  anybody can be the producer of content.  he added:  the challenge now is that it is hard to promote a programme with so much choice.   what this means  said stacey jolna  senior vice president of tv guide tv group  is that the way people find the content they want to watch has to be simplified for tv viewers. it means that networks  in us terms  or channels could take a leaf out of google s book and be the search engine of the future  instead of the scheduler to help people find what they want to watch. this kind of channel model might work for the younger ipod generation which is used to taking control of their gadgets and what they play on them. but it might not suit everyone  the panel recognised. older generations are more comfortable with familiar schedules and channel brands because they know what they are getting. they perhaps do not want so much of the choice put into their hands  mr hanlon suggested.  on the other end  you have the kids just out of diapers who are pushing buttons already - everything is possible and available to them   said mr hanlon.  ultimately  the consumer will tell the market they want.   of the 50 000 new gadgets and technologies being showcased at ces  many of them are about enhancing the tv-watching experience. high-definition tv sets are everywhere and many new models of lcd (liquid crystal display) tvs have been launched with dvr capability built into them  instead of being external boxes. one such example launched at the show is humax s 26-inch lcd tv with an 80-hour tivo dvr and dvd recorder. one of the us s biggest satellite tv companies  directtv  has even launched its own branded dvr at the show with 100-hours of recording capability  instant replay  and a search function. the set can pause and rewind tv for up to 90 hours. and microsoft chief bill gates announced in his pre-show keynote speech a partnership with tivo  called tivotogo  which means people can play recorded programmes on windows pcs and mobile devices. all these reflect the increasing trend of freeing up multimedia so that people can watch what they want  when they want.\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# grader-required-cell\n",
         "\n",
-        "with open(\"./bbc-text.csv\", 'r') as csvfile:\n",
+        "with open(\"/content/drive/MyDrive/Colab Notebooks/Project/datasets/bbc-text.csv\", 'r') as csvfile:\n",
         "    print(f\"First line (header) looks like this:\\n\\n{csvfile.readline()}\")\n",
         "    print(f\"Each data point looks like this:\\n\\n{csvfile.readline()}\")"
       ]
@@ -151,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "id": "87fb4a2a",
       "metadata": {
         "deletable": false,
@@ -189,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "id": "b10206ea",
       "metadata": {
         "deletable": false,
@@ -252,7 +308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "7f92f7fc",
       "metadata": {
         "deletable": false,
@@ -260,14 +316,32 @@
         "tags": [
           "graded"
         ],
-        "id": "7f92f7fc"
+        "id": "7f92f7fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8d5f6943-6e77-4313-e583-1e94419c2453"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "There are 2225 sentences in the dataset.\n",
+            "\n",
+            "First sentence has 436 words (after removing stopwords).\n",
+            "\n",
+            "There are 2225 labels in the dataset.\n",
+            "\n",
+            "The first 5 labels are ['tech', 'business', 'sport', 'sport', 'entertainment']\n"
+          ]
+        }
+      ],
       "source": [
         "# grader-required-cell\n",
         "\n",
         "# Test the functions\n",
-        "sentences, labels = parse_data_from_file(\"./bbc-text.csv\")\n",
+        "sentences, labels = parse_data_from_file(\"/content/drive/MyDrive/Colab Notebooks/Project/datasets/bbc-text.csv\")\n",
         "\n",
         "print(f\"There are {len(sentences)} sentences in the dataset.\\n\")\n",
         "print(f\"First sentence has {len(sentences[0].split())} words (after removing stopwords).\\n\")\n",
@@ -311,7 +385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "1e0158cb",
       "metadata": {
         "deletable": false,
@@ -357,7 +431,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "id": "cc283035",
       "metadata": {
         "deletable": false,
@@ -365,9 +439,26 @@
         "tags": [
           "graded"
         ],
-        "id": "cc283035"
+        "id": "cc283035",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 256
+        },
+        "outputId": "25a9e40b-0d0d-4242-be6d-33acab33a533"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-28-6f296bb3ec85>\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mtrain_sentences\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_sentences\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_labels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_val_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msentences\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTRAINING_SPLIT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"There are {len(train_sentences)} sentences for training.\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"There are {len(train_labels)} labels for training.\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"There are {len(val_sentences)} sentences for validation.\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: object of type 'NoneType' has no len()"
+          ]
+        }
+      ],
       "source": [
         "# grader-required-cell\n",
         "\n",
@@ -996,8 +1087,7 @@
   "metadata": {
     "dlai_version": "1.2.0",
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
@@ -1014,8 +1104,10 @@
     },
     "colab": {
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 5
